[package]
name = "desktop_display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip="symbols"

[dependencies]
winit = "0.27"
anyhow = { version = "1.0", features=["backtrace"] }
env_logger = "0.10"
log = "0.4"
fps_counter = "2.0"
raw-window-handle = "0.5"
mltg = { path="./lib/mltg" }
win_desktop_duplication = { path="./lib/win_desktop_duplication" }

[dependencies.windows-sys]
version = ">= 0.43"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi"
]
