[package]
name = "display_peek"
version = "0.1.4"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip="symbols"

[build-dependencies]
tauri-winres = "0.1"
windows = {version = "0.44", features=["Win32_Graphics_Direct3D_Fxc"]}

[dependencies]
tao = { version = "0.18", features=["tray", "serde"]}
anyhow = { version = "1.0", features=["backtrace"] }
env_logger = "0.10"
log = "0.4"
glam = "0.23"
directories-next = "2.0"
serde = "1.0"
toml = "0.7"
notify = "5.1"
open = "3.2"
winreg = "0.11"
dunce = "1.0"
error-tools = {git = "https://github.com/sidit77/error-tools", features=["log", "tao", "gui"]}

[dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_HiDpi"
]